Fix für forward-proxy